--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: workbook
 description: Do something.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/Ronbb/workbook
 
 environment:
   sdk: ">=2.14.3 <3.0.0"
